Fix: restore table layout, add spacer for left-right nav
- Revert flexbox to table-cell (was breaking greedy-nav JS)
- Add invisible spacer cell to push nav items to the right
- Brand stays left, nav items stay right

--- a/_sass/layout/_navigation.scss
+++ b/_sass/layout/_navigation.scss
@@ -204,21 +204,24 @@
   }
 
   .visible-links {
-    display: flex;
-    align-items: center;
+    display: table;
     width: 100%;
 
     li {
-      display: block;
+      display: table-cell;
+      vertical-align: middle;
 
       &:first-child {
         font-weight: bold;
         text-wrap: wrap;
-        margin-right: auto;
 
         a {
           margin-left: 0;
         }
+      }
+
+      &.nav-spacer {
+        width: 100%;
       }
 
       &:last-child {
